--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "scripts": {
     "dev": "concurrently \"npm run dev:main\" \"npm run dev:renderer\"",
+    "dev:debug": "concurrently \"npm run dev:main:debug\" \"npm run dev:renderer\"",
     "dev:demo": "MAESTRO_DEMO_DIR=/tmp/maestro-demo npm run dev",
     "dev:main": "tsc -p tsconfig.main.json && NODE_ENV=development electron .",
+    "dev:main:debug": "tsc -p tsconfig.main.json && MAESTRO_LOG_LEVEL=debug NODE_ENV=development electron .",
     "dev:renderer": "vite",
     "dev:web": "vite --config vite.config.web.mts",
     "build": "npm run build:main && npm run build:renderer && npm run build:web && npm run build:cli",
