chore: standardize indentation to tabs, fix line wrapping, add husky
Apply consistent tab indentation (per project style guide) and reformat
long lines across source files, tests, and components. Also fixes an
off-by-one path traversal bug in the better-sqlite3 native module
integration test (binDir used 3 levels up instead of 4, pointing to
src/node_modules instead of the project root node_modules). Adds husky
for pre-commit hook support.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "package:linux": "node scripts/set-version.mjs npm run build && node scripts/set-version.mjs electron-builder --linux",
     "start": "electron .",
     "clean": "rm -rf dist release node_modules/.vite",
-    "prepare": "echo 'No prepare script'",
+    "prepare": "husky || true",
     "postinstall": "electron-rebuild -f -w node-pty,better-sqlite3",
     "lint": "tsc -p tsconfig.lint.json && tsc -p tsconfig.main.json --noEmit && tsc -p tsconfig.cli.json --noEmit",
     "lint:eslint": "eslint src/",
@@ -292,6 +292,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.2.0",
     "lucide-react": "^0.303.0",
     "playwright": "^1.57.0",
