chore: add format:all and format:check:all npm scripts
Adds project-wide Prettier scripts to complement the existing
src/-scoped format and format:check commands.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
 		"lint": "tsc -p tsconfig.lint.json && tsc -p tsconfig.main.json --noEmit && tsc -p tsconfig.cli.json --noEmit",
 		"lint:eslint": "eslint src/",
 		"format": "prettier --write \"src/**/*.{ts,tsx}\"",
+		"format:all": "prettier --write .",
 		"format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
+		"format:check:all": "prettier --check .",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage",
